# CountingCoin

./: CMakeLists.txt  Makefile  README.md  Timediff.cpp  compile.sh  erode.cpp  erode.cu  func.cuh  func.h  header.h  hough.cpp  hough.cu  main.cpp  main.cu  opencv_sample.cpp  otsu.cpp  otsu.cu  run  sobel.cpp  sobel.cu  something.c  test.c  test.sh
fusion/: Makefile  device_variable.cu  func.h  main.cu  main_kernel.cu
orgin/: main.cu
premalloc/: erode.cu  func.cuh  hough.cu  main.cu  sobel.cu
